<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.febin.group21_inclass08.EditFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayoutEdit">


        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:id="@+id/textViewName"
            android:textSize="18sp" />

        <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:id="@+id/textViewDescription"
            android:textSize="18sp"
            android:layout_below="@+id/editTextName1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textViewGenre"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerGenre2"
            android:layout_alignTop="@+id/textViewGenre"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/editTextName1"
            android:layout_alignStart="@+id/editTextName1" />

        <TextView
            android:text="@string/ratingAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:id="@+id/textViewRating"
            android:layout_below="@+id/spinnerGenre2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="18sp" />

        <SeekBar
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewRating"
            android:id="@+id/seekBar1"
            android:max="5"
            android:layout_toRightOf="@+id/textViewDescription"
            android:layout_width="200dip" />

        <TextView
            android:text="@string/yearAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewRating"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="31dp"
            android:id="@+id/textViewYear"
            android:textSize="18sp" />

        <TextView
            android:text="@string/imdb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewYear"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="31dp"
            android:id="@+id/textViewIMDB"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextYear1"
            android:layout_above="@+id/textViewIMDB"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:maxLength="50"
            android:id="@+id/editTextName1"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:maxLength="1000"
            android:background="@drawable/border"
            android:layout_marginTop="13dp"
            android:id="@+id/editTextDescription1"
            android:layout_height="120dip"
            android:layout_below="@+id/textViewDescription"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDisplay1"
            android:layout_alignTop="@+id/seekBar1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:text="@string/save"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSave"
            android:layout_width="200dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextLink1"
            android:layout_alignBaseline="@+id/textViewIMDB"
            android:layout_alignBottom="@+id/textViewIMDB"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</FrameLayout>
